# strutils

./: CMakeLists.txt
libstrutils/: CMakeLists.txt  strutils.c
libstrutils/include/: strutils.h
libstrutils_tests/: CMakeLists.txt  catch_strutils.cpp  test_strlen.cpp  test_strtoint.cpp
